# AVIS

./: README.md  impresiones 3d  readme.md
Codigos/: CMakeLists.txt  PruebaRTOS.c  mpu.c  mpu.h  read.me
Codigos/Comunicacion/: CMakeLists.txt  main.c
Codigos/EchoPico/: CMakeLists.txt  EchoPico.c
Codigos/LECTOR/: README.md
Codigos/LECTOR/SimConnectExample/: WebApplication1.sln
Codigos/LECTOR/SimConnectExample/WebApplication1/: Program.cs
Codigos/LECTOR/SimConnectExample/fstelemetry/: config.yaml  generator.py  lector.py  run_fstelemetry.py
Codigos/MOTORES/: CMakeLists.txt  main.c  mpu.c
Codigos/MOTORES/freertos/: CMakeLists.txt
Codigos/MPU6050/: CMakeLists.txt  MPU6050pruebas.c
Codigos/PWMvariador/Comunicacion/: CMakeLists.txt  MotorConNums.c  main.c  mpu.c  mpu.h
Codigos/PWMvariador/Comunicacion/MPU_W/: CMakeLists.txt  mpu6050.c  mpu6050.h  mpu_sender.c
Codigos/PWMvariador/PWM/: CMakeLists.txt  PWMvfd.c
Codigos/YOKE/: CMakeLists.txt
Codigos/YOKE/include/: descriptors.h
Codigos/YOKE/src/: pico_hid_joystick.c  usb_descriptors.c
Documentacion/: MANUAL DE USUARIO.docx
Electronica de potencia/: README.md  parametros danfoss
Electronica de potencia/Variadores/: Avances.docx  Parametros-GTAKE.docx  Parametros-Gtake.md  Parametros_danfoss.docx  parametros_danfoss.md  ~$vances.docx
Esquematicos/: MOTORES.kicad_sch  README.md
Esquematicos/Yoke/: PLACA YOKE .kicad_pro
Planos/: Panel cessna-172 ACOTACIONES.dwg  Panel cessna-172.dwg  Panel llave selectora.dwg  Panel trim wheel.dwg  panel cessna-172 3D.dwg
(+3 files in other folders)
